# git-merge-onto

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/git_merge_onto/: __init__.py
tests/: _util.py  conftest.py  test_cli.py  test_merge.py
