[project]
name = "git-merge-onto"
version = "0.1.0"
description = "Re-parent a branch by merge instead of rebase: the git merge equivalent of `git rebase --onto`, without rewriting history."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Noé Rubinstein" }]
keywords = ["git", "merge", "rebase", "rebase-onto", "merge-base", "stacked-pull-requests"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/scortexio/git-merge-onto"
Repository = "https://github.com/scortexio/git-merge-onto"
Issues = "https://github.com/scortexio/git-merge-onto/issues"

[project.scripts]
git-merge-onto = "git_merge_onto:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]
